apps/workloads/tools/speedtest/limit-request-body-middleware.yaml
apiVersion: traefik.io/v1alpha1 # Or traefik.containo.us/v1alpha1 for older versions
kind: Middleware
metadata:
  name: limit-request-body
spec:
  buffering:
    maxRequestBodyBytes: 36700160
