apps/workloads/tools/speedtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
spec:
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
        networking/expose-web-ui: "true"
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1 # A higher weight means a stronger preference
              preference:
                matchExpressions:
                  - key: networkSpeed
                    operator: In
                    values:
                      - "2.5G"
      containers:
        - name: speedtest
          image: openspeedtest/latest
          ports:
            - name: web-ui
              containerPort: 3000
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
