apps/workloads/tools/speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-ui
spec:
  selector:
    app: speedtest
  ports:
    - port: 3000
      name: web-ui
