apps/workloads/tools/speedtest/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest-route
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "speed.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: limit-request-body
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
