apps/workloads/tools/speedtest/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: speedtest-policy
spec:
  endpointSelector:
    matchLabels:
      app: speedtest

  # Allow Ingress (Inbound)
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            app.kubernetes.io/component: interceptor
      toPorts:
        - ports:
            - port: "3000"
              protocol: "TCP"
